# OpenAutoFlutter

./: .metadata  Dockerfile  README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/test/: widget_test.dart
lib/: openautoflutter.dart  openautoflutter_method_channel.dart  openautoflutter_platform_interface.dart
linux/: CMakeLists.txt  openautoflutter_plugin.cc  openautoflutter_plugin_private.h
linux/av/: av_consumer.cc  av_consumer.h  h264_decoder.cc  h264_decoder.h  oa_video_texture.cc  oa_video_texture.h
linux/common/: SharedMemoryConsumer.cpp  SharedMemoryConsumer.hpp
linux/include/openautoflutter/: openautoflutter_plugin.h
linux/test/: openautoflutter_plugin_test.cc
test/: openautoflutter_method_channel_test.dart  openautoflutter_test.dart
